GH-2841 - Introduce new logging categories from the database.
Closes #2841

--- a/src/main/antora/modules/ROOT/pages/appendix/logging.adoc
+++ b/src/main/antora/modules/ROOT/pages/appendix/logging.adoc
@@ -11,3 +11,5 @@ To exclude or elevate some categories, the following loggers are in place:
 * `org.springframework.data.neo4j.cypher.unsupported`
 * `org.springframework.data.neo4j.cypher.deprecation`
 * `org.springframework.data.neo4j.cypher.generic`
+* `org.springframework.data.neo4j.cypher.security`
+* `org.springframework.data.neo4j.cypher.topology`
