Add logging section to appendix.
Don't know how this got lost.

--- a/src/main/antora/modules/ROOT/nav.adoc
+++ b/src/main/antora/modules/ROOT/nav.adoc
@@ -41,6 +41,7 @@
 * xref:appendix/index.adoc[]
 ** xref:appendix/conversions.adoc[]
 ** xref:appendix/neo4j-client.adoc[]
+** xref:appendix/logging.adoc[]
 ** xref:appendix/query-creation.adoc[]
 ** xref:appendix/custom-queries.adoc[]
 ** xref:appendix/spatial-types.adoc[]
