--- a/src/main/antora/modules/ROOT/nav.adoc
+++ b/src/main/antora/modules/ROOT/nav.adoc
@@ -48,4 +48,6 @@
 ** xref:appendix/migrating.adoc[]
 ** xref:appendix/build.adoc[]
 
-* https://github.com/spring-projects/spring-data-commons/wiki[Wiki]
+
+* xref:attachment$api/java/index.html[Javadoc,role=link-external,window=_blank]
+* https://github.com/spring-projects/spring-data-commons/wiki[Wiki,role=link-external,window=_blank]
