Escape property placeholder in reference docs.
Now it is no longer evaluated as variable.

See #2956

--- a/src/main/antora/modules/ROOT/pages/appendix/custom-queries.adoc
+++ b/src/main/antora/modules/ROOT/pages/appendix/custom-queries.adoc
@@ -519,4 +519,4 @@ Spring's property placeholders can be used in custom queries inside `${}`.
 include::example$documentation/repositories/domain_events/ARepository.java[tags=property-placeholder]
 ----
 
-In the example above, if the property `foo` would be set to `bar` then the `${foo}` block would be resolved to `bar`.
+In the example above, if the property `foo` would be set to `bar` then the `$\{foo\}` block would be resolved to `bar`.
