Fix formatting in documentation.
There was italic formatting in the Cypher examples
where there should have been visible underscores.

Signed-off-by: Gerrit Meier <meistermeier@gmail.com>
(cherry picked from commit e023d23ae9551866a4d8d350e6f2d600e4758637)

--- a/src/main/antora/modules/ROOT/pages/appendix/custom-queries.adoc
+++ b/src/main/antora/modules/ROOT/pages/appendix/custom-queries.adoc
@@ -353,8 +353,8 @@ Passing an instance of `Movie` to the repository method above, will generate the
 }
 ----
 
-A node is represented by a map. The map will always contain `__id__`  which is the mapped id property.
-Under `__labels__` all labels, static and dynamic, will be available.
+A node is represented by a map. The map will always contain `\\__id__`  which is the mapped id property.
+Under `\\__labels__` all labels, static and dynamic, will be available.
 All properties - and type of relationships - appear in those maps as they would appear in the graph when the entity would
 have been written by SDN.
 Values will have the correct Cypher type and won't need further conversion.
