GH-3002 - Introduce vector search on repository level
Signed-off-by: Gerrit Meier <meistermeier@gmail.com>

Closes #3002

--- a/src/main/antora/modules/ROOT/nav.adoc
+++ b/src/main/antora/modules/ROOT/nav.adoc
@@ -26,6 +26,7 @@
 ** xref:repositories/sdn-extension.adoc[]
 ** xref:repositories/query-keywords-reference.adoc[]
 ** xref:repositories/query-return-types-reference.adoc[]
+** xref:repositories/vector-search.adoc[]
 
 * xref:repositories/projections.adoc[]
 ** xref:projections/sdn-projections.adoc[]
