--- a/src/main/antora/modules/ROOT/pages/faq.adoc
+++ b/src/main/antora/modules/ROOT/pages/faq.adoc
@@ -908,7 +908,7 @@ And here is the reactive version, omitting the setup for brevity:
 import java.util.Collections;
 
 import org.junit.jupiter.api.Test;
-import org.testcontainers.containers.Neo4jContainer;
+import org.testcontainers.neo4j.Neo4jContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import reactor.test.StepVerifier;
@@ -927,7 +927,7 @@ import org.springframework.test.context.DynamicPropertySource;
 class ReactiveTemplateExampleTest {
 
 	@Container
-	private static Neo4jContainer<?> neo4jContainer = new Neo4jContainer<>("neo4j:5");
+	private static Neo4jContainer neo4jContainer = new Neo4jContainer("neo4j:5");
 
 	@DynamicPropertySource
 	static void neo4jProperties(DynamicPropertyRegistry registry) {
